samples show up, removed material-ui, added bootstrap, save not working yet

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -3,23 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>emai</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/main.css" />
   </head>
   <body>
     <div id="root"></div>
     <script src="assets/app.js"></script>
-    <script type="text/javascript">
-		WebFontConfig = {
-			google: { families: [ 'Roboto:400,300,500,700,900,400italic:latin' ] }
-		};
-		(function() {
-			var wf = document.createElement('script');
-			wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-			wf.type = 'text/javascript';
-			wf.async = 'true';
-			var s = document.getElementsByTagName('script')[0];
-			s.parentNode.insertBefore(wf, s);
-		})();
-  	</script>
   </body>
 </html>
